exp: update exp002–004 notebooks

--- a/experiments/exp003/exp003.ipynb
+++ b/experiments/exp003/exp003.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "294d650b",
    "metadata": {},
    "outputs": [],
@@ -15,143 +15,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "33d23166",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Config ===\n",
     "MODEL = \"model-1\"\n",
-    "EVAL_FILE = \"../../data/processed/bdm-corpus-2/stage-3/test.csv\"\n",
-    "TRAIN_FILE = \"../../data/processed/bdm-corpus-2/stage-3/train.csv\" # grab 6 examples for few shot\n",
+    "EVAL_FILE = \"../../data/processed/bdm-corpus-2/stage-4/test.csv\"\n",
+    "TRAIN_FILE = \"../../data/processed/bdm-corpus-2/stage-4/train.csv\" # grab 6 examples for few shot\n",
     "RESULT_FILE = \"../../results/exp003/results.csv\"\n",
     "TEMPERATURE = 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "125772f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_df = pd.read_csv(EVAL_FILE)\n",
-    "shot_df = pd.read_csv(TRAIN_FILE)"
+    "test_df = pd.read_csv(EVAL_FILE)\n",
+    "train_df = pd.read_csv(TRAIN_FILE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3623a97f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DataHora</th>\n",
-       "      <th>Manchete</th>\n",
-       "      <th>Direção</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2553</th>\n",
-       "      <td>2024-12-19 14:32:00</td>\n",
-       "      <td>Itaú BBA reforça recomendação de compra para I...</td>\n",
-       "      <td>Aumento</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1357</th>\n",
-       "      <td>2024-12-06 17:00:00</td>\n",
-       "      <td>MERCADOS: Petróleo recua após decisão da Opep ...</td>\n",
-       "      <td>Aumento</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1221</th>\n",
-       "      <td>2024-12-05 16:11:00</td>\n",
-       "      <td>Nomeação de novo primeiro-ministro ocorrerá no...</td>\n",
-       "      <td>Aumento</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>383</th>\n",
-       "      <td>2024-11-27 15:22:00</td>\n",
-       "      <td>Isenção do IR até R$ 5 mil teria efeito fiscal...</td>\n",
-       "      <td>Diminuição</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>744</th>\n",
-       "      <td>2024-12-02 11:17:00</td>\n",
-       "      <td>Emendas de relator, por exemplo, podem ser ret...</td>\n",
-       "      <td>Diminuição</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>2024-11-25 16:51:00</td>\n",
-       "      <td>WTI para janeiro recua 3,23%, a US$ 68,94 por ...</td>\n",
-       "      <td>Diminuição</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 DataHora                                           Manchete  \\\n",
-       "2553  2024-12-19 14:32:00  Itaú BBA reforça recomendação de compra para I...   \n",
-       "1357  2024-12-06 17:00:00  MERCADOS: Petróleo recua após decisão da Opep ...   \n",
-       "1221  2024-12-05 16:11:00  Nomeação de novo primeiro-ministro ocorrerá no...   \n",
-       "383   2024-11-27 15:22:00  Isenção do IR até R$ 5 mil teria efeito fiscal...   \n",
-       "744   2024-12-02 11:17:00  Emendas de relator, por exemplo, podem ser ret...   \n",
-       "179   2024-11-25 16:51:00  WTI para janeiro recua 3,23%, a US$ 68,94 por ...   \n",
-       "\n",
-       "         Direção  \n",
-       "2553     Aumento  \n",
-       "1357     Aumento  \n",
-       "1221     Aumento  \n",
-       "383   Diminuição  \n",
-       "744   Diminuição  \n",
-       "179   Diminuição  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Sample few-shot examples (6)\n",
-    "fewshot_up = shot_df[shot_df[\"Direção\"] == \"Aumento\"].sample(n=3, random_state=1) # prompts are reproducible with seed 1\n",
-    "fewshot_down = shot_df[shot_df[\"Direção\"] == \"Diminuição\"].sample(n=3, random_state=1)\n",
-    "fewshot_df = pd.concat([fewshot_up, fewshot_down])\n",
-    "\n",
-    "display(fewshot_df)\n",
-    "\n",
-    "# === Step 2: Sample few-shot examples (6) ===\n",
-    "fewshot_up = eval_df[eval_df[\"Direção\"] == \"Aumento\"].sample(n=3, random_state=1)\n",
-    "fewshot_down = eval_df[eval_df[\"Direção\"] == \"Diminuição\"].sample(n=3, random_state=1)\n",
-    "fewshot_df = pd.concat([fewshot_up, fewshot_down])\n",
-    "fewshot_indices = fewshot_df.index"
+    "# sample and sort few-shot examples, all occur chronologically before test set\n",
+    "fewshot_up = train_df[train_df[\"Direção\"] == \"Aumento\"].sample(n=3, random_state=1)\n",
+    "fewshot_down = train_df[train_df[\"Direção\"] == \"Diminuição\"].sample(n=3, random_state=1)\n",
+    "fewshot_df = pd.concat([fewshot_up, fewshot_down]).copy()\n",
+    "fewshot_df[\"DataHora\"] = pd.to_datetime(fewshot_df[\"DataHora\"])\n",
+    "fewshot_df = fewshot_df.sort_values(\"DataHora\").reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "74043b3a",
    "metadata": {},
    "outputs": [],
@@ -166,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "72ff86eb",
    "metadata": {},
    "outputs": [],
@@ -184,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "4b5eadcd",
    "metadata": {},
    "outputs": [],
@@ -203,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "f99bf9c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run inference\n",
     "predictions = []\n",
-    "for i, row in eval_df.iterrows():\n",
+    "for i, row in test_df.iterrows():\n",
     "    prompt = build_fewshot_prompt(row[\"Manchete\"])\n",
     "    try:\n",
     "        out = query_ollama(MODEL, prompt)\n",
@@ -222,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "556ab6c9",
    "metadata": {},
    "outputs": [
@@ -235,14 +140,14 @@
     }
    ],
    "source": [
-    "eval_df[\"Previsão\"] = predictions\n",
-    "eval_df.to_csv(RESULT_FILE, index=False)\n",
+    "test_df[\"Previsão\"] = predictions\n",
+    "test_df.to_csv(RESULT_FILE, index=False)\n",
     "print(f\"✅ Saved predictions to {RESULT_FILE}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "d1316262",
    "metadata": {},
    "outputs": [
@@ -255,12 +160,12 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Aumento      0.508     0.910     0.652       200\n",
-      "  Diminuição      0.571     0.120     0.198       200\n",
+      "     Aumento      0.547     0.612     0.578       227\n",
+      "  Diminuição      0.397     0.335     0.364       173\n",
       "\n",
-      "    accuracy                          0.515       400\n",
-      "   macro avg      0.540     0.515     0.425       400\n",
-      "weighted avg      0.540     0.515     0.425       400\n",
+      "    accuracy                          0.492       400\n",
+      "   macro avg      0.472     0.474     0.471       400\n",
+      "weighted avg      0.482     0.492     0.485       400\n",
       "\n"
      ]
     }
@@ -289,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "7593f399",
    "metadata": {},
    "outputs": [
@@ -297,8 +202,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[182  18]\n",
-      " [176  24]]\n"
+      "[[139  88]\n",
+      " [115  58]]\n"
      ]
     }
    ],
@@ -308,7 +213,7 @@
     "[[TP FN]\n",
     " [FP TN]]\n",
     "'''\n",
-    "cm = confusion_matrix(df[\"Direção\"], df[\"Previsão\"], labels=[\"Aumento\", \"Diminuição\"])\n",
+    "cm = confusion_matrix(test_df[\"Direção\"], test_df[\"Previsão\"], labels=[\"Aumento\", \"Diminuição\"])\n",
     "print(cm)"
    ]
   }
