--- a/experiments/exp002/exp002.ipynb
+++ b/experiments/exp002/exp002.ipynb
@@ -15,14 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a3051180",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Config ===\n",
     "MODEL = \"model-1\"\n",
-    "EVAL_FILE = \"../../data/processed/bdm-corpus-2/stage-3/test.csv\"\n",
+    "EVAL_FILE = \"../../data/processed/bdm-corpus-2/stage-4/test.csv\"\n",
     "RESULT_FILE = \"../../results/exp002/results.csv\"\n",
     "TEMPERATURE = 0.0"
    ]
@@ -32,16 +31,6 @@
    "execution_count": 3,
    "id": "a83c4900",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "eval_df = pd.read_csv(EVAL_FILE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b28bde98",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -49,18 +38,19 @@
        "400"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(eval_df)"
+    "df = pd.read_csv(EVAL_FILE)\n",
+    "len(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ca6227ac",
    "metadata": {},
    "outputs": [],
@@ -74,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "010579f2",
    "metadata": {},
    "outputs": [],
@@ -93,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "672e89e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Step 4: Run prediction loop ===\n",
     "predictions = []\n",
-    "for i, row in eval_df.iterrows():\n",
+    "for i, row in df.iterrows():\n",
     "    prompt = build_prompt(row[\"Manchete\"])\n",
     "    try:\n",
     "        out = query_ollama(MODEL, prompt)\n",
@@ -112,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8edc6224",
    "metadata": {},
    "outputs": [
@@ -125,8 +115,8 @@
     }
    ],
    "source": [
-    "eval_df[\"Previsão\"] = predictions\n",
-    "eval_df.to_csv(RESULT_FILE, index=False)\n",
+    "df[\"Previsão\"] = predictions\n",
+    "df.to_csv(RESULT_FILE, index=False)\n",
     "print(f\"Saved predictions to {RESULT_FILE}\")"
    ]
   },
@@ -145,12 +135,12 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Aumento      0.539     0.205     0.297       200\n",
-      "  Diminuição      0.511     0.825     0.631       200\n",
+      "     Aumento      0.559     0.229     0.325       227\n",
+      "  Diminuição      0.430     0.763     0.550       173\n",
       "\n",
-      "   micro avg      0.516     0.515     0.516       400\n",
-      "   macro avg      0.525     0.515     0.464       400\n",
-      "weighted avg      0.525     0.515     0.464       400\n",
+      "    accuracy                          0.460       400\n",
+      "   macro avg      0.495     0.496     0.438       400\n",
+      "weighted avg      0.503     0.460     0.422       400\n",
       "\n"
      ]
     }
@@ -187,8 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 41 158]\n",
-      " [ 35 165]]\n"
+      "[[ 52 175]\n",
+      " [ 41 132]]\n"
      ]
     }
    ],
