chore(exp001): update notebook

--- a/experiments/exp001/exp001.ipynb
+++ b/experiments/exp001/exp001.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# Baseline Experiment\n",
-    "- Hypothesis (h1a): Sentiment outputs, mapped to direction, can predict short-term exchange rate movements.\n",
+    "- https://drive.google.com/file/d/1sV2DSHaIFE-BvPs0POqH3y4qMH883j6N/view?usp=drive_link\n",
+    "- Hypothesis (h1a): Sentiment outputs, mapped to direction, can predict short-term exchange rate movements - won't perform well because the model lacks domain specific context\n",
     "- Objective: A baseline comparison before testing hyped-up LLMs capabilities\n",
     "- Value Proposition: This is the first known study to be conducted on applying language models to trade in emerging currency markets. Especially in a multilingual context.\n",
     "- Why sentiment analysis as baseline: \n",
@@ -18,255 +19,140 @@
     "    I just want to rule sentiment analysis out of the picture. \"Predicting directional movement\" is a better approach.\n",
     "    - It was used as a benchmark in very similar paper found at https://doi.org/10.1016/j.mlwa.2023.100508\n",
     "\n",
-    "- Independent Variable (Predictor):\n",
-    "    - Text: headline / article content\n",
-    "    - Category: FinBERT sentiment output\n",
-    "    - Binary Label: heuristic mapping (positive -> 1, negative -> -1) (bullish or bearish in commercial terms)\n",
-    "    - (POSSIBLY CONSIDER as a control var/experiment?): Multi-class Label: neutral (0) label defined by threshold label (min exchange rate % change)\n",
-    "\n",
-    "- Dependent Variable (Ground Truth):\n",
-    "    - Directional Movement: binary direction of exchange rate following news timestamp (time frame TBD)\n",
-    "    - (POSSIBLY CONSIDER?): percent change in exchange rate over defined window? Measures profitability...\n",
-    "\n",
-    "- Dataset Creation Process:\n",
-    "    - News Data: There are only 3,519 headlines before **Timestamp[2024-12-30 17:38:00]**, which is the latest possible timestamp for a t+20 analysis (since exchange rate data ends at 17:58:00). In total, the dataset contains 4630 headlines. These cannot be used until exchange rates are available on a minute-level basis for December 30, 2024, to January 15, 2025. \n",
-    "        - Dataset Creation Process: Bom Dia Mercado (BDM) → Eli formatted news data into excel file → preprocess.ipynb → export to repo → final dataset\n",
-    "    - FX Rate Data: Minute-level time series of USD/BRL exchange rates, synchronized with news timestamps in pandas ISO datetime object format.\n",
-    "        - Dataset Creation Process: Bloomberg → retrieve USD/BRL exchange rates as excel file → preprocess.ipynb → export to repo → final dataset\n",
-    "    - Final Dataset: experimental_dataset.csv\n",
-    "        - Took the last available exchange rate for any news released outside of market hours. Process described in preprocess.ipynb. \n",
-    "\n",
-    "- Methodology: Sentiment Analysis\n",
-    "    - Encoder-only (representation model) - BERT - FinBERT-PT-BR is a domain specific version of FinBERT, another domain specific BERT model\n",
     "- Model:\n",
     "    - HuggingFace Transformers Model: lucas-leme/FinBERT-PT-BR\n",
     "\n",
+    "- Independent Variable (Predictor):\n",
+    "    - Text: headline\n",
+    "    - Category: FinBERT sentiment output\n",
+    "    - Binary Label: heuristic mapping (positive -> 1, negative -> -1) (bullish or bearish in commercial terms)\n",
+    "\n",
+    "- Dependent Variable (Ground Truth):\n",
+    "    - Directional Movement: binary direction of exchange rate following news timestamp (exchange rate change after t + 5 minutes)\n",
+    "\n",
+    "- Dataset Creation Process:\n",
+    "    - Stage 4 test dataset\n",
+    "\n",
+    "- Experimentation:\n",
+    "    - Encoder-only (representation model) - BERT - FinBERT-PT-BR is a domain specific version of FinBERT, another domain specific BERT model\n",
+    "    - Methodology: Load lucas-leme/FinBERT-PT-BR / tokenizer → tokenize headlines → FinBERT → sentiment output\n",
+    "\n",
     "- RESULTS:\n",
+    "    - Bad as expected, check below\n",
     "\n",
     "Notes:\n",
-    "    - Dataset used in this experiment: experimental_dataset.csv with 3519 news headlines \n",
-    "    - Using HEADLINES ONLY not ARTICLE CONTENT and COMMENTS as past research has shown that these are not useful for prediction purposes, and they are noisy.\n",
-    "    - Straightforward t+1 to t+20 prediction horizon by computing directional movement using following exchange rate minus exchange rate at t for each increment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad69ca08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Doc 1 Methodology: Load lucas-leme/FinBERT-PT-BR / tokenizer → tokenize headlines → FinBERT → sentiment output\n",
+    "    - Using HEADLINES ONLY not ARTICLE CONTENT and COMMENTS as past research has shown that these are not useful for prediction purposes, and they are noisy. No timestamps either because that isn't sentiment.\n",
     "\n",
     "HuggingFace notes\n",
     "- BERT is an architecture while lucas-leme/FinBERT-PT-BR is a checkpoint\n",
     "- import the model specific class from the transformers library\n",
-    "- call from_pretrained() from the above class to download the model's weights (pytorch_model.bin) and configuration settings (config.json)\n",
-    "- tokenizer is a class from the transformers library that finds the tokenizer specified in the checkpoint and fully preprocesses input text\n",
-    "'''\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "68ce3698",
-   "metadata": {},
-   "source": [
-    "## Load Model from HuggingFace (only need to do once)"
+    "- local: call from_pretrained() from the above class to download model's weights (pytorch_model.bin) and config settings (config.json)\n",
+    "- tokenizer is a class from the transformers library that finds the tokenizer specified in the checkpoint and fully preprocesses input text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b7efff5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers import AutoTokenizer, BertForSequenceClassification\n",
-    "\n",
-    "# Load from HuggingFace\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"lucas-leme/FinBERT-PT-BR\")\n",
-    "model = BertForSequenceClassification.from_pretrained(\"lucas-leme/FinBERT-PT-BR\")\n",
-    "\n",
-    "# Save locally\n",
-    "model.save_pretrained(\"../checkpoints/exp001\")\n",
-    "tokenizer.save_pretrained(\"../checkpoints/exp001\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9d427ac4",
-   "metadata": {},
-   "source": [
-    "## Load Model from Local Storage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ba33bad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers import AutoTokenizer, BertForSequenceClassification, pipeline\n",
-    "import pandas as pd\n",
-    "\n",
-    "local_path = \"../../checkpoints/exp001\"\n",
-    "\n",
-    "df = pd.read_csv(\"\") \n",
-    "\n",
-    "model = BertForSequenceClassification.from_pretrained(local_path)\n",
-    "tokenizer = AutoTokenizer.from_pretrained(local_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a0289cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = BertForSequenceClassification.from_pretrained(\n",
-    "    local_path,\n",
-    "    trust_remote_code=True,\n",
-    "    local_files_only=True\n",
-    ")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    local_path,\n",
-    "    trust_remote_code=True,\n",
-    "    local_files_only=True\n",
-    ")\n",
-    "finbert_pipeline = pipeline(\n",
-    "    task='text-classification',\n",
-    "    model=model,\n",
-    "    tokenizer=tokenizer\n",
-    ")\n",
-    "# mapping predictions\n",
-    "pred_mapper = {\n",
-    "    0: \"POSITIVE\",\n",
-    "    1: \"NEGATIVE\", \n",
-    "    2: \"NEUTRAL\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a687e3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sentiment Analysis\n",
-    "results = []\n",
-    "for headline in df['Headline']:\n",
-    "    result = finbert_pipeline(headline)[0]\n",
-    "\n",
-    "    if result['label'] == pred_mapper[0]:  # POSITIVE\n",
-    "        sentiment = 1\n",
-    "    elif result['label'] == pred_mapper[1]:  # NEGATIVE\n",
-    "        sentiment = -1\n",
-    "    elif result['label'] == pred_mapper[2]:  # NEUTRAL\n",
-    "        sentiment = 0\n",
-    "    results.append(sentiment)\n",
-    "\n",
-    "# save predictions to the dataframe\n",
-    "df['Prediction'] = results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6cdc0fed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"../../results/exp001/exp001.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8fd978db",
-   "metadata": {},
-   "source": [
-    "## Analyze Colab Results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0632e388",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previsão\n",
+      "-1    219\n",
+      " 1    181\n",
+      "Name: count, dtype: int64 \n",
+      "Total values: 400\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"../../results/exp001/exp001.csv\")\n",
-    "preds = df['Prediction']\n",
-    "print(preds.value_counts(), '\\n' 'total vals (it checks out - good): 'f'{preds.value_counts().sum()}')"
+    "df = pd.read_csv(\"../../results/exp001/results.csv\")\n",
+    "preds = df['Previsão']\n",
+    "print(preds.value_counts(), '\\n' 'Total values: 'f'{preds.value_counts().sum()}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "6eeec4ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapping = {1: 'Aumento', -1: 'Diminuição'}\n",
+    "df['Previsão'] = df['Previsão'].map(mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "e4e5f66d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 98 129]\n",
+      " [ 83  90]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "filtered_df = df[df[\"Prediction\"] != 0].copy() # no DA for neutral (0), just binary classification. Rid of all neutral predictions \n",
-    "\n",
-    "forward_return_cols = [col for col in df.columns if col.startswith(\"Forward Return t+\")]\n",
-    "\n",
-    "conf_matrices = {}\n",
     "'''\n",
-    "[[TN, FP],\n",
-    " [FN, TP]]\n",
+    "[[TP FN]\n",
+    " [FP TN]]\n",
     "'''\n",
-    "\n",
-    "for col in forward_return_cols:\n",
-    "    y_true = filtered_df[col]\n",
-    "    y_pred = filtered_df[\"Prediction\"]\n",
-    "\n",
-    "    #  -1 and 1 (exclude 0s in ground truth if present)\n",
-    "    mask = y_true != 0\n",
-    "    y_true_filtered = y_true[mask]\n",
-    "    y_pred_filtered = y_pred[mask]\n",
-    "\n",
-    "    #  confusion matrix with labels fixed to [-1, 1]\n",
-    "    cm = confusion_matrix(y_true_filtered, y_pred_filtered, labels=[-1, 1])\n",
-    "    conf_matrices[col] = cm\n",
-    "\n",
-    "# Display one example\n",
-    "for k, v in conf_matrices.items():\n",
-    "    print(f\"Confusion matrix for {k}:\\n{v}\\n\")"
+    "cm = confusion_matrix(df[\"Direção\"], df[\"Previsão\"], labels=[\"Aumento\", \"Diminuição\"])\n",
+    "print(cm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "20ce7e87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classification Report:\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     Aumento      0.541     0.432     0.480       227\n",
+      "  Diminuição      0.411     0.520     0.459       173\n",
+      "\n",
+      "    accuracy                          0.470       400\n",
+      "   macro avg      0.476     0.476     0.470       400\n",
+      "weighted avg      0.485     0.470     0.471       400\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#accuracies\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
-    "filtered_df = df[df[\"Prediction\"] != 0].copy()\n",
+    "# Normalize predictions (just in case)\n",
+    "df[\"Previsão\"] = df[\"Previsão\"].str.strip().str.capitalize()\n",
+    "df[\"Direção\"] = df[\"Direção\"].str.strip().str.capitalize()\n",
     "\n",
-    "forward_return_cols = [col for col in df.columns if col.startswith(\"Forward Return t+\")]\n",
-    "accuracies = {}\n",
+    "# Report\n",
+    "report = classification_report(\n",
+    "    df[\"Direção\"], df[\"Previsão\"],\n",
+    "    labels=[\"Aumento\", \"Diminuição\"],\n",
+    "    target_names=[\"Aumento\", \"Diminuição\"],\n",
+    "    digits=3\n",
+    ")\n",
     "\n",
-    "for col in forward_return_cols:\n",
-    "    y_true = filtered_df[col]\n",
-    "    y_pred = filtered_df[\"Prediction\"]\n",
-    "    mask = y_true != 0\n",
-    "    accuracy = (y_true[mask] == y_pred[mask]).mean()\n",
-    "    accuracies[col] = accuracy\n",
-    "\n",
-    "accuracy_df = pd.DataFrame.from_dict(accuracies, orient='index', columns=['Accuracy'])\n",
-    "accuracy_df.index.name = 'Horizon'\n",
-    "accuracy_df.reset_index(inplace=True)\n",
-    "\n",
-    "display(accuracy_df)\n"
+    "print(\"\\nClassification Report:\\n\")\n",
+    "print(report)"
    ]
   }
  ],
