chore(experiments): update EDA, preprocess, exp001, and exp003 notebooks
Brings notebooks in line with new dataset layout and preprocessing.

--- a/experiments/exp001/exp001.ipynb
+++ b/experiments/exp001/exp001.ipynb
@@ -5,7 +5,7 @@
    "id": "e0599d14",
    "metadata": {},
    "source": [
-    "# Baseline Experiment\n",
+    "# exp001 - Baseline Experiment\n",
     "- https://drive.google.com/file/d/1sV2DSHaIFE-BvPs0POqH3y4qMH883j6N/view?usp=drive_link\n",
     "- Hypothesis (h1a): Sentiment outputs, mapped to direction, can predict short-term exchange rate movements - won't perform well because the model lacks domain specific context\n",
     "- Objective: A baseline comparison before testing hyped-up LLMs capabilities\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0632e388",
    "metadata": {},
    "outputs": [
